--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,31 @@
 {
-  "buildCommand": "pnpm build",
-  "outputDirectory": "dist/public",
-  "devCommand": "pnpm dev",
+  "version": 2,
+  "buildCommand": "pnpm install && pnpm build:client",
   "installCommand": "pnpm install",
   "framework": null,
-  "regions": ["iad1"],
+  "outputDirectory": "dist/public",
+  "rewrites": [
+    {
+      "source": "/api/trpc/:path*",
+      "destination": "/api/trpc/:path*"
+    },
+    {
+      "source": "/api/oauth/:path*",
+      "destination": "/api/oauth/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x",
+      "maxDuration": 10
+    }
+  },
   "env": {
     "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
   }
 }
 
