--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "version": 2,
-  "buildCommand": "pnpm install && pnpm build:client",
-  "installCommand": "pnpm install",
-  "framework": null,
+  "buildCommand": "pnpm build:client",
   "outputDirectory": "dist/public",
   "rewrites": [
     {
@@ -17,15 +14,6 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 10
-    }
-  },
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
 
