Simplify API to single handler with Express routing

--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,8 @@
   "outputDirectory": "dist/public",
   "rewrites": [
     {
-      "source": "/api/trpc/:path*",
-      "destination": "/api/trpc/:path*"
-    },
-    {
-      "source": "/api/oauth/:path*",
-      "destination": "/api/oauth/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/api/:path*",
+      "destination": "/api"
     }
   ]
 }
