Include server files in Vercel function deployment

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,11 @@
       "source": "/api/:path*",
       "destination": "/api"
     }
-  ]
+  ],
+  "functions": {
+    "api/index.ts": {
+      "includeFiles": "server/**"
+    }
+  }
 }
 
